Update intro slides

--- a/lectures/00_intro.tex
+++ b/lectures/00_intro.tex
@@ -207,11 +207,11 @@
 \begin{column}{.9\textwidth}
   \begin{wideitemize}
   \item There are no exams, I will be assigning problem sets on a (quasi) weekly basis.
-  \item You can use any computer package you wish to use. Solutions will be handed out written in R. 
+  \item Since there is a very large number of students, I will be grading the problem sets automatically. I will be requiring the code in R so I can check the output automatically. 
     \begin{itemize}
     \item See syllabus for details
     \end{itemize}
-  \item There are no required readings, but the papers listed in the    syllabus are relevant to the material we will cover in class. I will post lecture notes before class on the material along with the class slides.
+  \item There are no required readings, but the papers listed in the syllabus are relevant to the material we will cover in class. I will post lecture notes after class on the material along with the class slides.
   \item I also highly recommend the following texts:
     \begin{itemize}
     \item Angrist and  Pischke, Mostly Harmless Econometrics
@@ -262,6 +262,36 @@
 \end{column}%
 \end{columns}
 \end{frame}
+
+\begin{frame}{Important caveats (Part II)}
+  \begin{columns}[T] % align columns
+  \begin{column}{.7\textwidth}
+    \begin{wideitemize}
+    \item The definition of being a good empirical researcher has expanded significantly
+      \begin{itemize}
+        \item Not just about methods
+        \item Also about reproducibilty and replicability
+      \end{itemize}
+    \item Ability to do good coding and good coding practice has reduced \emph{dramatically} thanks to LLMs
+      \begin{itemize}
+        \item These LLMs will be useful as inputs to research, but also as technologies to improve your research
+        \item I would encourage you use Copilot in VS Code (or similar coding assistant) as well as various LLMs
+        \item I will \emph{expect} that you can write good code now -- the bar has been raised because gravity is lower now!
+      \end{itemize}
+    \end{wideitemize}
+    \url{https://paulgp.com/2024/06/24/llm_talk.html}
+  \end{column}%
+  \hfill%
+  \begin{column}{.28\textwidth}
+    \makebox[\linewidth][c]{
+      \resizebox{\linewidth}{!}{
+        \includegraphics{images/ollama.png}
+      }
+    }
+  \end{column}%
+  \end{columns}
+  \end{frame}
+  
 
 
 \begin{frame}{Structure of the course}
