Update introduction lecture to clarify coding practices impact due to LLMs

--- a/lectures/00_intro.tex
+++ b/lectures/00_intro.tex
@@ -272,7 +272,7 @@
         \item Not just about methods
         \item Also about reproducibilty and replicability
       \end{itemize}
-    \item Ability to do good coding and good coding practice has reduced \emph{dramatically} thanks to LLMs
+    \item Cost to do good coding and good coding practice has reduced \emph{dramatically} thanks to LLMs
       \begin{itemize}
         \item These LLMs will be useful as inputs to research, but also as technologies to improve your research
         \item I would encourage you use Copilot in VS Code (or similar coding assistant) as well as various LLMs
