Add arguments for PO and DAGs to lecture on causal inference

--- a/lectures/01_po_dags.tex
+++ b/lectures/01_po_dags.tex
@@ -796,6 +796,34 @@ the data''\\
 \end{columns}
 \end{frame}
 
+\begin{frame}{Why PO or DAGs? Imbens (2020)}
+  \begin{columns}[T] % align columns
+    \begin{column}{.5\textwidth}
+      Arguments in favor of DAGs
+      \color{blue}\rule{\linewidth}{4pt}
+      \begin{enumerate}
+     \item Pedagogically very intuitive
+     \item Can be very systematic (easy to check identification). 
+     \begin{itemize}
+      \item Especially true with many covariates
+     \end{itemize}
+      \end{enumerate}
+    \end{column}%
+    \hfill%
+    \begin{column}{.5\textwidth}
+      Arguments in favor of PO
+      \color{blue}\rule{\linewidth}{4pt}
+      \begin{enumerate}
+        \item Some assumptions are more naturally encoded in PO (montonocity, shape)
+        \item Simultaneous equations and PO naturally align (see next slides) on supply and demand
+        \item Econ settings focus on just a few variables 
+        \item PO works well with treatment effect heterogeneity
+        \item Ties directly to questions of survey and design of experiments
+         \end{enumerate}
+    \end{column}
+  \end{columns}
+\end{frame}
+
 \begin{frame}{Structural equations and causal effects (Haile 2020)}
 \begin{columns}[T] % align columns
   \begin{column}{.7\textwidth}
