--- a/lectures/01_po_dags.tex
+++ b/lectures/01_po_dags.tex
@@ -145,7 +145,7 @@
   \end{frame}
 }
 
-\title[]{\textcolor{blue}{Potential Outcomes and Directed Acylic Graphs}}
+\title[]{\textcolor{blue}{Potential Outcomes and Directed Acyclic Graphs}}
 \author[PGP]{}
 \institute[FRBNY]{\small{Paul Goldsmith-Pinkham}}
 \date{\today}
@@ -533,7 +533,7 @@ the data''\\
 \end{columns}
 \end{frame}
 
-\begin{frame}{Identification through Directed Acylic Graphs (DAGs)}
+\begin{frame}{Identification through Directed Acyclic Graphs (DAGs)}
 \begin{columns}[T] % align columns
   \begin{column}{.5\textwidth}
     \begin{wideitemize}
@@ -560,7 +560,7 @@ the data''\\
 \end{columns}
 \end{frame}
 
-\begin{frame}{Identification through Directed Acylic Graphs (DAGs)}
+\begin{frame}{Identification through Directed Acyclic Graphs (DAGs)}
 \begin{columns}[T] % align columns
   \begin{column}{.5\textwidth}
     \begin{wideitemize}
@@ -598,7 +598,7 @@ the data''\\
 \end{columns}
 \end{frame}
 
-\begin{frame}{Identification through Directed Acylic Graphs (DAGs)}
+\begin{frame}{Identification through Directed Acyclic Graphs (DAGs)}
 \begin{columns}[T] % align columns
   \begin{column}{.6\textwidth}
     \begin{wideitemize}
@@ -641,7 +641,7 @@ the data''\\
 \end{columns}
 \end{frame}
 
-\begin{frame}{Identification through Directed Acylic Graphs (DAGs)}
+\begin{frame}{Identification through Directed Acyclic Graphs (DAGs)}
 \begin{columns}[T] % align columns
   \begin{column}{.6\textwidth}
     \begin{wideitemize}
@@ -685,7 +685,7 @@ the data''\\
 \end{columns}
 \end{frame}
 
-\begin{frame}{Identification through Directed Acylic Graphs (DAGs)}
+\begin{frame}{Identification through Directed Acyclic Graphs (DAGs)}
 \begin{columns}[T] % align columns
   \begin{column}{.6\textwidth}
     \begin{wideitemize}
