Add discussion on limitations of randomization and update syllabus with relevant literature

--- a/lectures/02_randomization.tex
+++ b/lectures/02_randomization.tex
@@ -283,7 +283,24 @@
 \end{columns}
 \end{frame}
 
-
+\begin{frame}{If the use of randomization is so powerful, why don't we always use it?}
+  There are a few reasons:
+  \begin{enumerate}
+    \item People may not want to be randomized into different treatments. 
+    \begin{itemize}
+      \item They value their choices, and it may be impractical to randomize their decisions even if there is a clear benefit to doing so. 
+      \item A firm, for example, may not want to randomize their policies
+    \end{itemize}
+    \item It may be unethical to randomize.
+    \begin{itemize}
+      \item For example, if there is a clear benefit to a treatment, it may be unethical to withhold that treatment from individuals by placing them in the control.
+    \end{itemize}
+    \item It may be impossible to randomize. 
+    \begin{itemize}
+      \item For example, if we are interested in the effect of a policy change, it may be impossible to randomize the policy change across different regions or states.
+    \end{itemize}
+  \end{enumerate}
+\end{frame}
 
 \begin{frame}{A historical aside on the credibility revolution}
 \begin{columns}[T] % align columns
