--- a/syllabus.tex
+++ b/syllabus.tex
@@ -187,6 +187,7 @@ ECON 550, ECON 551
     \item ``Models, Measurement, and the Language of Empirical Economics'', Haile \url{https://s3.amazonaws.com/file.paulgp.com/30d/haile.pdf
     }
     \item ``Statistics and Causal Inference'', Holland 1986
+    \item ``Potential Outcome and Directed Acyclic Graph Approaches to Causality: Relevance for Empirical Practice in Economics'', Imbens (2020)
     \item ``The Identification Zoo: Meanings of Identification in Econometrics'', Lewbel, 2019
     \end{itemize}
   \item Class 2: Research Design, Randomization, and Model- vs. Design-Based Inference
