--- a/homework/homework1.tex
+++ b/homework/homework1.tex
@@ -69,6 +69,16 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
 \end{center}
 %\date{September 26, 2014}
 
+You should have gotten this homework assignment from the Github classroom environment (\url{https://classroom.github.com/classrooms/192971645-yale-mgmt-737-spring-2025-classroom}). In submitting your problem set, you should have two files in your Github repository:
+
+\begin{enumerate}
+  \item \texttt{homework1.R}, which contains your code,
+  \item  \texttt{homework1.md}, which contains your writeup.
+\end{enumerate} and \texttt{homework1.R} or \texttt{homework1.py}. The first file should be a PDF file that contains your answers to the problem set. The second file should contain the code you used to generate your answers. You can use any other files you want, but they should not be in the Github repository.
+
+
+This problem set is expected to be coded in either \texttt{R} or \texttt{Python} (\texttt{R} is  recommended). 
+
 \begin{enumerate}
 \item Randomization. This analysis will use the Dehijia
   and Wahba sample from the Lalonde dataset of the NSW experiment. The dataset is
