Emphasize regression as the starting point for empirical projects in propensity scores lecture

--- a/lectures/03_propensity_scores.tex
+++ b/lectures/03_propensity_scores.tex
@@ -491,7 +491,7 @@
 \begin{columns}[T] % align columns
   \begin{column}{.65\textwidth}
     \begin{quote}
-      We believe regression should be the starting point for most empirical projects. This is not a theorem; undoubtedly, there are circumstances where propensity score matching provides more reliable estimates of average causal effects. The first reason we don't find ourselves on the propensity-score bandwagon is practical: there are many details to be filled in when implementing propensity-score matching - such as how to model the score and how to do inference - these details are not yet standardized. Different researchers might therefore reach very different conclusions, even when using the same data and covariates. Moreover, as we've seen with the Horvitz-Thompson estimands,there isn't very much theoretical daylight between regression and propensity-score weighting.
+      \textbf{We believe regression should be the starting point for most empirical projects.} This is not a theorem; undoubtedly, there are circumstances where propensity score matching provides more reliable estimates of average causal effects. The first reason we don't find ourselves on the propensity-score bandwagon is practical: there are many details to be filled in when implementing propensity-score matching - such as how to model the score and how to do inference - these details are not yet standardized. Different researchers might therefore reach very different conclusions, even when using the same data and covariates. Moreover, as we've seen with the Horvitz-Thompson estimands,there isn't very much theoretical daylight between regression and propensity-score weighting.
       \end{quote}
 \end{column}%
 \hfill%
