--- a/lecture_notes/04_interference_dynamics_notes.tex
+++ b/lecture_notes/04_interference_dynamics_notes.tex
@@ -178,7 +178,7 @@ This type of estimation is non-parametric in nature: we've assumed no functional
 \begin{align*}
   E(\tau_{i}(d, d')| \bX = x)  &= E(Y_{i} | D_{i} = d, \bX = x) - E(Y_{i} | D_{i} = d', \bX = x),
 \end{align*}
-then we'll need to condition on treatment catgories within each cell, which can be very data hungry, and less precise. 
+then we'll need to condition on treatment categories within each cell, which can be very data hungry, and less precise. 
 
 Often, instead of estimating the effect for every point separately, we will postulate a model for the potential outcomes: 
 \begin{align*}
@@ -210,7 +210,7 @@ which is the slope parameter. Hence, estimation can be made more precise by pool
 
     \hspace{10pt} Each dot in \Cref{fig:linearmodel1} is the estimated mean at the point, and we find a positive treatment effect. Imposing the model helps \emph{a lot} compared to non-parametric form. To see this, consider the treatment effect comparing $d$ to $d-1$ in \Cref{fig:linearmodel2}
 
-    \hspace{10pt} The direction of the effect is much more ambiguous. This is a common tradeoff in estimation: imposing a model can help with precision, but can also lead to bias if the model is misspecified.
+    \hspace{10pt} The direction of the effect is much more ambiguous. This is a common trade-off in estimation: imposing a model can help with precision, but can also lead to bias if the model is misspecified.
   \end{exmp}
   \end{boxD}
 
@@ -265,7 +265,7 @@ In many cases, the jump from discrete ordered treatments to continuous valued tr
 
 Instead, to do non-parametric estimation we'll need to make other assumptions and use other methods, like kernel regression or local linear regression. We'll discuss these in future classes, but the key point is that we will want to make some amount of smoothness assumptions the effect of the treatment on the potential outcome.
 
-Instead of non-parametric estimation, it is also reaosnable to assume a functional form, as above, and proceed from there. Then everything is exactly the same. 
+Instead of non-parametric estimation, it is also reasonable to assume a functional form, as above, and proceed from there. Then everything is exactly the same. 
 
 \subsection{Unordered multi-valued treatment}
 Finally, we might have a setting where the treatment is unordered. For example, we might consider the impact of different CEOs on firms' performance. In this case, we can't assume any particular ordering of the treatment, and it's not clear how to presume a functional form. Instead, there is a set of $K$ treatments in $\mathcal{D}$, and we can consider a set of different contrasts between them: $E(\tau_{i}(d, d'))$ for all $d, d' \in \mathcal{D}$.
@@ -321,7 +321,7 @@ We will briefly discuss the impact of treatments over time to set the stage for 
 
 There are a large number of ways to simplify these potential outcomes. One simple way would be to restrict treatments to only affect outcomes in the future, and not the past. This is often referred to as the ``no anticipation'' assumption. The second is to assume that treatments will only turn on once: this allows the researcher to only consider the adoption date as the relevant period.\footnote{This is common in the staggered difference-in-difference setting.} 
 
-As you can see, things become much more complex as soon as you allow for dynamic effects. In order to make progress, it will often be necessary to make restrictions on teh dynamics to make the estimands identified. We will discuss these in more detail when we discuss difference-in-differences.
+As you can see, things become much more complex as soon as you allow for dynamic effects. In order to make progress, it will often be necessary to make restrictions on the dynamics to make the estimands identified. We will discuss these in more detail when we discuss difference-in-differences.
 
 \section{The SUTVA hits the fan}
 
@@ -384,7 +384,7 @@ jumped to this construction immediately. They did not have a structural interpre
   \begin{cmt}[Historical context on peer effects]
     \citet{manski1993identification} focused on a linear-in-means structural equation
   \begin{align*}
-    Y &= \underbrace{\beta E(Y|g)}_{\text{endogeneous}} + \underbrace{\gamma_{1} E(X|g)}_{\text{exogeneous}} + \gamma_{2} X\\
+    Y &= \underbrace{\beta E(Y|g)}_{\text{endogenous}} + \underbrace{\gamma_{1} E(X|g)}_{\text{exogenous}} + \gamma_{2} X\\
     &+ \underbrace{\gamma_{3} g}_{\text{contextual}} + u. 
   \end{align*}
  Peers were not well-defined in the model, but empirically, were usually groups like
@@ -416,13 +416,13 @@ Given $n$ individuals, for person $i$, how much interference can we allow? What 
     \end{equation*}
 This question is analogous to our setting with treatment dynamics: how much spillover should we allow? SUTVA is complicated by the fact that there is no natural ``no anticipation'' condition due to the natural flow of time. As you might expect, there is no ``one solution'' in this setting. Certain restrictions need to be made to identify some estimands.
 
-\citet{manski2013identification} is a very nice discussion of this in a \emph{very} high-level way. One key assumption he highlights is that ``anonymity'' of treatment spillover is a very important assumption. This implies that if I have peers who are treated, it does not matter \emph{which} of those peers are treated -- the impact on me is identical. This is a very strong assumption, but it is a necessary one to identify the effect of peers. If each peer's effect is allowed to be unique, then the effect of peers is not identified, since there is no way to separate out the treatment's spillover effect from the effect of the peer itself.\footnote{It might be doable in some networks, but it would be very challenging to do so, and require exogeneous network connections.}
+\citet{manski2013identification} is a very nice discussion of this in a \emph{very} high-level way. One key assumption he highlights is that ``anonymity'' of treatment spillover is a very important assumption. This implies that if I have peers who are treated, it does not matter \emph{which} of those peers are treated -- the impact on me is identical. This is a very strong assumption, but it is a necessary one to identify the effect of peers. If each peer's effect is allowed to be unique, then the effect of peers is not identified, since there is no way to separate out the treatment's spillover effect from the effect of the peer itself.\footnote{It might be doable in some networks, but it would be very challenging to do so, and require exogenous network connections.}
 
 A key question to keep in mind when considering spillovers: are you attempting to estimate the \emph{spillover} effect, or are you attempting to identify individual ATE in the presence of spillovers? These are very different estimands, and require different assumptions to identify. For the purposes of external validity, the latter is really only relevant if the context you apply the treatment in would have limited spillovers as well. 
 
 We now briefly discuss two papers in this space to give intuition.
 
-\paragraph{\citet{aronow2017estimating}} is a lynchpin paper in this setting that provides a framework for thinking about estimation and identification under general forms ofb interference. They use design-based inference, and consider the following generalized mapping.
+\paragraph{\citet{aronow2017estimating}} is a lynchpin paper in this setting that provides a framework for thinking about estimation and identification under general forms of interference. They use design-based inference, and consider the following generalized mapping.
 
 \begin{defN}
   For any generalized vector of interventions, $\mathbf{D}_{n}$, there's an experimental design which assigns probabilities over $\mathbf{D}_{n}$. There is then an \emph{exposure} mapping $f(\mathbf{D}_{n}, \theta_{i})$ from these vectors to a treatment for an individual, which includes traits of an individual, $\theta_{i}$ (e.g. their network location) and the treatment vector, and maps it to an exposure outcome.
@@ -430,13 +430,13 @@ We now briefly discuss two papers in this space to give intuition.
 
 This exposure mapping does two things. First, it makes restrictions on types of interactions (e.g. who can affect you and what type of effect it is).\footnote{Concretely: consider a network of peers affecting you. Is it the sum of your connected individuals in your network? Any exposure at all? Does it matter who in your network exposes you?} Second, it maps the experimental design to a propensity score of the exposure treatment. This allows the use of Horvitz-Thompson estimators.
 
-So where are the bodies buried in this method? You have to have a correctly defined exposure mapping, and you have to have a correctly defined experimental design. In the case of a randomized experiemnt, the latter is straightforward, but the former is not, and typically needs to be motivated by theory, or asssessed for robustness. This is an active literature.
+So where are the bodies buried in this method? You have to have a correctly defined exposure mapping, and you have to have a correctly defined experimental design. In the case of a randomized experiment, the latter is straightforward, but the former is not, and typically needs to be motivated by theory, or assessed for robustness. This is an active literature.
 
-\paragraph{\citet{athey2018exact}} studies null hypothesis tests in networks under intereference. A key feature that this paper adds: testing specific types of analysis by creating ``artificial'' experiments. This paper is particularly powerful because it allows for testing in settings where there is uncertainty about the exposure mapping, and gives a framework for thinking about testing in a single network. 
+\paragraph{\citet{athey2018exact}} studies null hypothesis tests in networks under interference. A key feature that this paper adds: testing specific types of analysis by creating ``artificial'' experiments. This paper is particularly powerful because it allows for testing in settings where there is uncertainty about the exposure mapping, and gives a framework for thinking about testing in a single network. 
 
 \begin{boxF}
   \begin{cmt}
-    When thinking about experiments in networks (and other settings), the structure of spillovers is very important. It is extraordinarily helpful to identify settings where there are \emph{zero} spillovers. Having units (such as villages, roommate pairs, etc.) that are isolated from one another is a very helpful way to identify the effect of the treatments. If we permute the treaments across these groups, then we can assess the spillover effects in a very clean way.
+    When thinking about experiments in networks (and other settings), the structure of spillovers is very important. It is extraordinarily helpful to identify settings where there are \emph{zero} spillovers. Having units (such as villages, roommate pairs, etc.) that are isolated from one another is a very helpful way to identify the effect of the treatments. If we permute the treatments across these groups, then we can assess the spillover effects in a very clean way.
     
     \hspace{10pt}If, instead, we have only a single network, then we need to make strong assumptions about the structure of the network to identify the spillover effects. Namely, we need to have a well-defined exposure mapping that asserts that some units are sufficiently independent from others to serve as control units. 
   \end{cmt}
@@ -448,12 +448,12 @@ So where are the bodies buried in this method? You have to have a correctly defi
     My views on social interactions summed up}
 \end{marginfigure}
 
-It is already very hard to do research on spillovers. Make sure to not ignore the difficult identification challenges and assumptions that you'll need to make.  If you need a model, that's great! But often you are just interested in starting from a statistical perspective, which suggests you shoudl focus on a design-based approach as in \citet{aronow2017estimating}.
+It is already very hard to do research on spillovers. Make sure to not ignore the difficult identification challenges and assumptions that you'll need to make.  If you need a model, that's great! But often you are just interested in starting from a statistical perspective, which suggests you should focus on a design-based approach as in \citet{aronow2017estimating}.
  
 \subsection{Spatial Spillovers}
 Much of the spatial literature has sat in the same literature as social interactions. Distance on a network graph can be viewed as a similar distance metric to geographic (or economic) distance.Similar $A$ matrix, and consequentially similar structural models are proposed. 
 
-The \citet{aronow2017estimating} setting allows for this as well.  From an identification standpoint, there isnothing deeply different here relative to networks, except that distance is potentially more continuous / complex. When we revisit simulated instruments, we will discuss some interesting implications raised by \citet{borusyak2020non}.
+The \citet{aronow2017estimating} setting allows for this as well.  From an identification standpoint, there is nothing deeply different here relative to networks, except that distance is potentially more continuous / complex. When we revisit simulated instruments, we will discuss some interesting implications raised by \citet{borusyak2020non}.
 
 \subsection{Economic interactions}
 Consider the following simple experiment -- I give one half of people in the economy checks for \$2000 dollars. I then study the impact of these checks on their consumption. Why might the effects be different than if I had run this experiment on a small share of individuals?
@@ -473,7 +473,7 @@ The economic spillovers coming through budget constraints are hugely important, 
 
 \begin{fullwidth}
   \begin{quote}
-    Our paper bridges these two approaches. We offer a method to measure allocative efficiency in a (quasi-) experimental settings. This method works as follows. An econometrician observes firm-level data in an economy where a (quasi-) natural experiment has taken place. This experiment changes the set of frictions faced by treated firms while leaving control firms unaffected. Under the appropriate identifying assumption, the econometrician can estimate the causal effect of the experimenton firm-level outcomes, using classic difference-in-difference estimators. Standard policy evaluations typically estimate treatment effects on firm size or employment. However, these treatment effects alone cannot speak to allocative efficiency. To do so, we show that the econometrician needs to estimate treatment effects on the distribution of log marginal products of capital (lMRPKs). These estimates can then be injected in a simple aggregation formula to answer two simple questions: (i) how much did the actual policy change contribute to changes in aggregate efficiency (ex post evaluation)? (ii) how would aggregate efficiency have changed if the policy had been extended to all firms in the economy (scale-up)?
+    Our paper bridges these two approaches. We offer a method to measure allocative efficiency in a (quasi-) experimental settings. This method works as follows. An econometrician observes firm-level data in an economy where a (quasi-) natural experiment has taken place. This experiment changes the set of frictions faced by treated firms while leaving control firms unaffected. Under the appropriate identifying assumption, the econometrician can estimate the causal effect of the experimental firm-level outcomes, using classic difference-in-difference estimators. Standard policy evaluations typically estimate treatment effects on firm size or employment. However, these treatment effects alone cannot speak to allocative efficiency. To do so, we show that the econometrician needs to estimate treatment effects on the distribution of log marginal products of capital (lMRPKs). These estimates can then be injected in a simple aggregation formula to answer two simple questions: (i) how much did the actual policy change contribute to changes in aggregate efficiency (ex post evaluation)? (ii) how would aggregate efficiency have changed if the policy had been extended to all firms in the economy (scale-up)?
   \end{quote}
 \end{fullwidth}
 
